Remove temp changes